try adding jupyterlab install

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 FROM continuumio/miniconda3:main
 
-RUN conda install -c conda-forge xeus-cling -y
+RUN conda install -c conda-forge xeus-cling jupyterlab -y
 
 # Copy environment.yml (if found) to a temp location so we update the environment. Also
 # copy "noop.txt" so the COPY instruction does not fail if no environment.yml exists.
